:bug: Fix correct alignment of property names

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/component.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/component.scss
@@ -672,6 +672,7 @@
 
 .variant-property-name {
   @include t.use-typography("body-small");
+  margin-inline-start: var(--sp-s);
   color: var(--color-foreground-secondary);
   display: block;
   overflow: hidden;
